# dynamic_mcp

./: .env.example  .gitignore  BPFTRACE_IMPLEMENTATION.md  MIGRATION_NOTES.md  QUICK_START_SYSTEMD.md  README.md  SYSTEMD_INSTALLATION.md  crash-mcp.service  dynamic-mcp.service  install.sh  package-lock.json  pyproject.toml  requirements.txt  setup.py  test_integration.py  test_permissions.sh  test_systemd_integration.sh
.github/workflows/: build.yml  main.yml  release.yml
src/crash_mcp/: config.py  dynamic_connector.py  permission_manager.py  server.py  systemd_installer.py  tunnel_manager.py
src/crash_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/dynamic_mcp/: bpftrace_executor.py  config.py  kernel_detection.py  server.py
tests/: __init__.py  test_dynamic_connector.py
tests/bpftrace/: __init__.py  test_bpftrace_executor.py
tests/crash/: simple_crash_server_test.py  test_crash_server.py
