[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
script-files = ["setup.py"]

[project]
name = "dynamic-mcp"
version = "0.1.0"
description = "MCP server for crash dump analysis"
authors = [{name = "42Research Ltd", email = "software@42research.co.uk"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pexpect>=4.8.0",
    "psutil>=5.9.0",
    "python-dateutil>=2.8.0",
    "aiohttp>=3.9.0"
]

[project.scripts]
dynamic-mcp = "dynamic_mcp.server:main"
dynamic-mcp-http = "dynamic_mcp.server:main_http"
dynamic-mcp-install-systemd = "dynamic_mcp.systemd_installer:install_systemd_service"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
dynamic_mcp = ["dynamic-mcp.service"]
